# pyreversi

./: .dockerignore  Dockerfile  Makefile  README.md  kind.yaml  mkdocs.yml  mypy.ini  pyproject.toml  skaffold.yaml
docs/: conf.py  index.rst  modules.rst  pyreversi.rst
pyreversi/: __init__.py  __main__.py  game.py  logic.py  models.py  players.py
reversi/: __main__.py  game.py  logic.py  models.py  player.py  players.py
tests/: test_game.py  test_logic.py  test_models.py  test_players.py  test_reversi.py
