[tool.poetry]
name = "reversi"
version = "0.1.0"
description = ""
authors = ["Kimiaki Kinugasa <kimiakikinugasa@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict --doctest-modules --cov=reversi"
xfail_strict = true
testpaths = [
    "tests"
]
