[tool.poetry]
name = "reversi"
version = "0.1.0"
description = ""
authors = ["Kimiaki Kinugasa <kimiakikinugasa@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.8"
Keras = "^2.4.3"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict --cov=reversi"
xfail_strict = true
testpaths = [
    "tests"
]
