[tool.poetry]
name = "pyreversi"
version = "0.1.0"
description = ""
authors = ["Kimiaki Kinugasa <kimiakikinugasa@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules --cov=pyreversi"
xfail_strict = true
testpaths = [
    "tests"
]

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.pylint.messages_control]
disable = "C0330, C0326"

# Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.pylint.format]
max-line-length = "88"
